added stylesheets  and modified html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <head>
     <title>My WebPage</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>
         Hey There!
     </h1>
+    <h2>Welcome to My new site</h2>
 </body>
